--- a/assignment.html
+++ b/assignment.html
@@ -1,13 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
+<!--Comments help make the code easier to understand-->
+
+<!DOCTYPE html><!--Sets the document type-->
+<html lang="en"><!--Selects the language the page will be in-->
 
 <head>
+    <!--Title of the page that appears on the tab-->
     <title>Project 1</title>
 </head>
 
+<!--What can be seen on the page, excluding comments-->
 <body>
-    <h1>Welcome to the website</h1>
-    <p></p>
+    <!--Paragraph that is printed onto the page-->
+    <p>Welcome to this HTML page, which uses all of the essential parts of structure</p>
 </body>
 
 </html>
